# phaicaid

./: .gitignore  .npmignore  Makefile  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  publish.yml
bench/: benchmark_readme.sh  direct_hook.py  direct_hook_heavy.py
templates/pydaemon/: run_daemon.py
templates/pydaemon/phaicaid/: __init__.py  _registry.py  context.py  decorators.py
tests/: conftest.py  test_context.py  test_daemon.py  test_decorators.py  test_registry.py
